<resources>
    <string name="app_name">Contactos</string>
    <string name="pnombre">Nombre</string>
    <string name="pfecha">Fecha</string>
    <string name="ptelefono">Telefono</string>
    <string name="pemail">Email</string>
    <string name="pdescripcion">Descripcion</string>
    <string name="pdia">Dia</string>
    <string name="pmes">Mes</string>
    <string name="panio">Anio</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="hint_fecha">Fecha de Nacimiento</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_email">Email</string>
    <string name="hint_descripcion">Descripción Contacto</string>
    <string name="boton_fecha">Set Fecha</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_confirmar">Editar Datos</string>
    <string name="titulo_confirmar">Confirmar Datos</string>
</resources>
