<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ftrani.semana2contactos.MainActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSetFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_fecha"/>

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fecha"/>


    </LinearLayout>

<EditText
    android:id="@+id/edtTelefono"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_telefono"/>


    <EditText
        android:id="@+id/edtEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"/>


<EditText
    android:id="@+id/edtDescripcion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_descripcion"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_siguiente"
        android:onClick="abrirContacto"
        />

</LinearLayout>
